--- a/package.json
+++ b/package.json
@@ -12,24 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.1.0",
-    "@angular/compiler": "~2.1.0",
-    "@angular/core": "~2.1.0",
-    "@angular/forms": "~2.1.0",
-    "@angular/http": "~2.1.0",
-    "@angular/platform-browser": "~2.1.0",
-    "@angular/platform-browser-dynamic": "~2.1.0",
-    "@angular/router": "~3.1.0",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
+    "@angular/upgrade": "2.0.0",
+    "angular2-datatable": "^0.5.0",
+    "angular2-in-memory-web-api": "^0.0.20",
+    "angular2-jwt": "0.1.23",
+    "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
+    "ng2-bootstrap": "^1.1.5",
+    "ng2-pagination": "^0.5.1",
+    "ng2-table": "^1.3.2",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.27",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
-    "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.19-3",
-    "codelyzer": "1.0.0-beta.1",
+    "angular-cli": "1.0.0-beta.16",
+    "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -40,7 +49,13 @@
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "~2.0.3",
-    "webdriver-manager": "10.2.5"
-  }
+    "typescript": "2.0.2",
+    "typings": "^1.0.4",
+    "canonical-path": "0.0.2",
+    "http-server": "^0.9.0",
+    "lodash": "^4.11.1",
+    "karma-htmlfile-reporter": "^0.2.2",
+    "rimraf": "^2.5.2"
+  },
+  "repository": {}
 }
